add validation logic for input fields and some styling

--- a/client/src/shared/components/FormElements/Password.css
+++ b/client/src/shared/components/FormElements/Password.css
@@ -1,9 +1,3 @@
-.form-input span {
+.span_point {
 	cursor: pointer;
-	border: 1px solid #ccc;
-	border-left: none;
-	background: #ebebeb;
-}
-.form-input span:active {
-	background: #979797;
 }
