--- a/client/src/shared/components/UI/Card.css
+++ b/client/src/shared/components/UI/Card.css
@@ -1,9 +1,9 @@
-.card {
-  position: relative;
-  margin: 0;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  border-radius: 2px;
+.card_shadow {
+	/* position: relative;
+  margin: 0; */
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+	/* border-radius: 2px;
   padding: 1rem;
   overflow: hidden;
-  background: white;
+  background: white; */
 }
