--- a/client/src/events/pages/AddEvent.css
+++ b/client/src/events/pages/AddEvent.css
@@ -1,15 +1,15 @@
-form {
-    width: 60%;
-    margin: 0 auto;
+form.addEvent {
+  width: 60%;
+  margin: 0 auto;
 }
 
 label {
-    font-weight: bold;
+  font-weight: bold;
 }
 .addEvent {
-	width: 60%;
-	margin: 5rem auto;
+  width: 60%;
+  margin: 5rem auto;
 }
 .addEvent h2 {
-    text-align: center;
+  text-align: center;
 }
