--- a/client/src/users/pages/UserProfile.css
+++ b/client/src/users/pages/UserProfile.css
@@ -51,21 +51,60 @@
     margin-bottom: 20px;
 }
 .profile_categories-item{
+    border: none;
     display: inline-block;
     background-color: #ddd;
     padding: 5px 20px 5px 30px;
     border-radius: 25px;
     position: relative;
     font-size: 15px;
-    margin: 10px;
+    margin: 10px 10px 10px 0;
 }
 .profile_categories-item::before{
     content: '#';
     position: absolute;
     left: 15px;
 }
-
-
+.profile_categories-item:focus{
+    outline: none;
+}
+.add_category-btn{
+    border: none;
+    background-color: #58be66;
+    color: #fff;
+    border-radius: 25px;
+    padding: 5px 15px;
+    margin-bottom: 15px;
+}
+.add_category-btn:focus{
+    outline: none;
+}
+.categories-list{
+    transition: all .5s;
+}
+.event_list-item{
+    margin-bottom: 30px;
+}
+.event-item{
+    width: 100%;
+    padding: 10px 20px;
+    background-color: rgba(205,205,205,.3);
+    border-radius: 10px;
+    display: flex;
+    text-transform: uppercase;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    color: #000;
+}
+.event-item:hover{
+    text-decoration: none;
+    color: #000;
+}
+.profile-title{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 18px;
+}
 @media (max-width: 600px){
     .profile_inner{
         padding: 10px;
@@ -82,5 +121,11 @@
     }
     .profile_btn-item + .profile_btn-item{
         margin-left: 10px;
+        padding: 7px 15px;
+    }
+}
+@media (max-width: 470px){
+    .event_date{
+        display: none;
     }
 }
