fix userprofile clases

--- a/client/src/users/pages/UserProfile.css
+++ b/client/src/users/pages/UserProfile.css
@@ -1,146 +1,144 @@
-
-
-.profile-container{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+.profile-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
-.profile_inner{
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 30px;
+.profile_inner {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 30px;
 }
-.profile-top{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    margin-bottom: 30px;
+.profile-top {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  margin-bottom: 30px;
 }
-.profile-avatar{
+.profile-avatar {
+  text-align: center;
+}
+.profile-avatar span {
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+  background-color: #cdcdcd;
+  border-radius: 50%;
+  font-size: 0;
+  text-align: center;
+  line-height: 150px;
+  color: #4e4e4e;
+  transition: all 0.3s cubic-bezier(0.4, 0, 1, 1);
+}
+.profile-avatar span:hover {
+  font-size: 18px;
+}
+.profile-name {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+.profile-email {
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+.profile-info {
+  text-align: center;
+}
+.profile_btn-item {
+  background-color: #58be66;
+  padding: 7px 25px;
+  border-radius: 25px;
+  color: #fff;
+  text-decoration: none;
+}
+.profile_btn-item:hover {
+  text-decoration: none;
+  color: #fff;
+}
+.profile_btn-item + .profile_btn-item {
+  margin-left: 20px;
+}
+.profile_categories {
+  margin-bottom: 20px;
+}
+.profile_categories-item {
+  border: none;
+  display: inline-block;
+  background-color: #ddd;
+  padding: 5px 20px 5px 30px;
+  border-radius: 25px;
+  position: relative;
+  font-size: 15px;
+  margin: 10px 10px 10px 0;
+}
+.profile_categories-item::before {
+  content: '#';
+  position: absolute;
+  left: 15px;
+}
+.profile_categories-item:focus {
+  outline: none;
+}
+.add_category-btn {
+  border: none;
+  background-color: #58be66;
+  color: #fff;
+  border-radius: 25px;
+  padding: 5px 15px;
+  margin-bottom: 15px;
+}
+.add_category-btn:focus {
+  outline: none;
+}
+.categories-list {
+  transition: all 0.5s;
+}
+.event_list-item {
+  margin-bottom: 30px;
+}
+.user_profile_event-item {
+  width: 100%;
+  padding: 10px 20px;
+  background-color: rgba(205, 205, 205, 0.3);
+  border-radius: 10px;
+  display: flex;
+  text-transform: uppercase;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  color: #000;
+}
+.user_profile_event-item:hover {
+  text-decoration: none;
+  color: #000;
+}
+.profile-title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 18px;
+}
+.profile_categories-item.added {
+  background-color: #58be66;
+}
+@media (max-width: 600px) {
+  .profile_inner {
+    padding: 10px;
+  }
+  .profile-top {
+    display: block;
+  }
+  .profile-info {
     text-align: center;
+    margin-top: 20px;
+  }
+  .profile-top {
+    padding: 20px 0px;
+  }
+  .profile_btn-item + .profile_btn-item {
+    margin-left: 10px;
+    padding: 7px 15px;
+  }
 }
-.profile-avatar span{
-    display: inline-block;
-    width: 150px;
-    height: 150px;
-    background-color: #cdcdcd;
-    border-radius: 50%;
-    font-size: 0;
-    text-align: center;
-    line-height: 150px;
-    color: #4e4e4e;
-    transition: all .3s cubic-bezier(0.4, 0, 1, 1);
-}
-.profile-avatar span:hover{
-    font-size: 18px;
-}
-.profile-name{
-    font-size: 30px;
-    margin-bottom: 15px;
-}
-.profile-email{
-    font-size: 16px;
-    margin-bottom: 30px;
-}
-.profile-info{
-    text-align: center;
-}
-.profile_btn-item{
-    background-color: #58be66;
-    padding: 7px 25px;
-    border-radius: 25px;
-    color: #fff;
-    text-decoration: none;
-}
-.profile_btn-item:hover{
-    text-decoration: none;
-    color: #fff;
-}
-.profile_btn-item + .profile_btn-item{
-    margin-left: 20px;
-}
-.profile_categories{
-    margin-bottom: 20px;
-}
-.profile_categories-item{
-    border: none;
-    display: inline-block;
-    background-color: #ddd;
-    padding: 5px 20px 5px 30px;
-    border-radius: 25px;
-    position: relative;
-    font-size: 15px;
-    margin: 10px 10px 10px 0;
-}
-.profile_categories-item::before{
-    content: '#';
-    position: absolute;
-    left: 15px;
-}
-.profile_categories-item:focus{
-    outline: none;
-}
-.add_category-btn{
-    border: none;
-    background-color: #58be66;
-    color: #fff;
-    border-radius: 25px;
-    padding: 5px 15px;
-    margin-bottom: 15px;
-}
-.add_category-btn:focus{
-    outline: none;
-}
-.categories-list{
-    transition: all .5s;
-}
-.event_list-item{
-    margin-bottom: 30px;
-}
-.event-item{
-    width: 100%;
-    padding: 10px 20px;
-    background-color: rgba(205,205,205,.3);
-    border-radius: 10px;
-    display: flex;
-    text-transform: uppercase;
-    justify-content: space-between;
-    margin-bottom: 15px;
-    color: #000;
-}
-.event-item:hover{
-    text-decoration: none;
-    color: #000;
-}
-.profile-title{
-    font-size: 20px;
-    font-weight: 700;
-    margin-bottom: 18px;
-}
-.profile_categories-item.added{
-    background-color: #58be66;
-}
-@media (max-width: 600px){
-    .profile_inner{
-        padding: 10px;
-    }
-    .profile-top{
-        display: block;
-    }
-    .profile-info{
-        text-align: center;
-        margin-top: 20px;
-    }
-    .profile-top{
-        padding: 20px 0px;
-    }
-    .profile_btn-item + .profile_btn-item{
-        margin-left: 10px;
-        padding: 7px 15px;
-    }
-}
-@media (max-width: 470px){
-    .event_date{
-        display: none;
-    }
+@media (max-width: 470px) {
+  .event_date {
+    display: none;
+  }
 }
