--- a/client/src/events/pages/AddEvent.css
+++ b/client/src/events/pages/AddEvent.css
@@ -1,119 +1,122 @@
-.addEvent h2 {
-    color: white;
-    text-align: center;
-    background-color: #16a085;
-    padding: 5px;
-  }
-  .addEvent{
-      padding: 0;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  .addEvent {
+.addEvent {
+  padding: 0;
   width: 70%;
   margin: 5rem auto;
-  }
-  .form-group{
-    width: 80%;
-    margin: auto;
-  }
-  
-  .addBtn{
-    text-align: right;
-    margin-right: 190px;;
-  }
-  
-  .addBtn button{
-    margin-left: 10px;;
-  }
-  
-  ol.progtrckr {
-    margin: 0;
-    padding-bottom: 2.2rem;
-    list-style-type: none;
-    text-align: center;
-  }
-  ol.progtrckr li {
-    display: inline-block;
-    text-align: center;
-    line-height: 4.5rem;
-    padding: 0 0.7rem;
-    cursor: pointer;
-  }
-  ol.progtrckr li span {
-    padding: 0 1.5rem;
-  }
-  @media (max-width: 650px) {
-    .progtrckr li span {
-      display: none;
-    }
-  }
-  .progtrckr em {
+}
+.addEvent h2 {
+  color: white;
+  text-align: center;
+  background-color: #16a085;
+  padding: 5px;
+}
+
+label {
+  font-weight: bold;
+}
+
+.form-group {
+  width: 80%;
+  margin: auto;
+}
+
+.addBtn {
+  text-align: right;
+  margin-right: 190px;
+  position: absolute;
+  bottom: 15px;
+}
+
+.addBtn button {
+  margin-left: 10px;
+}
+
+ol.progtrckr {
+  margin: 0;
+  padding-bottom: 2.2rem;
+  list-style-type: none;
+  text-align: center;
+}
+ol.progtrckr li {
+  display: inline-block;
+  text-align: center;
+  line-height: 4.5rem;
+  padding: 0 0.7rem;
+  cursor: pointer;
+}
+ol.progtrckr li span {
+  padding: 0 1.5rem;
+}
+@media (max-width: 650px) {
+  .progtrckr li span {
     display: none;
-    font-weight: 700;
-    padding-left: 1rem;
   }
-  @media (max-width: 650px) {
-    .progtrckr em {
-      display: inline;
-    }
+}
+.progtrckr em {
+  display: none;
+  font-weight: 700;
+  padding-left: 1rem;
+}
+@media (max-width: 650px) {
+  .progtrckr em {
+    display: inline;
   }
-  
-  ol.progtrckr li.progtrckr-todo {
-    color: silver;
-    border-bottom: 4px solid silver;
-  }
-  ol.progtrckr li.progtrckr-doing {
-    color: black;
-    border-bottom: 4px solid #16a085;
-  }
-  ol.progtrckr li.progtrckr-done {
-    color: black;
-    border-bottom: 4px solid #16a085;
-  }
-  ol.progtrckr li:after {
-    content: "\00a0\00a0";
-  }
-  ol.progtrckr li:before {
-    position: relative;
-    bottom: -3.7rem;
-    float: left;
-    left: 50%;
-  }
-  ol.progtrckr li.progtrckr-todo:before {
-    content: "\039F";
-    color: silver;
-    background-color: white;
-    width: 1.2em;
-    line-height: 1.4em;
-  }
-  ol.progtrckr li.progtrckr-todo:hover:before {
-    color:#16a085;
-  }
-  
-  ol.progtrckr li.progtrckr-doing:before {
-    content: "\2022";
-    color: white;
-    background-color: #16a085;
-    width: 1.2em;
-    line-height: 1.2em;
-    border-radius: 1.2em;
-  }
-  ol.progtrckr li.progtrckr-doing:hover:before {
-    color: #16a085;
-  }
-  
-  ol.progtrckr li.progtrckr-done:before {
-    content: "\2713";
-    color: white;
-    background-color: #16a085;
-    width: 1.2em;
-    line-height: 1.2em;
-    border-radius: 1.2em;
-  }
-  ol.progtrckr li.progtrckr-done:hover:before {
-    color: #16a085;
-  }
-  
+}
+
+ol.progtrckr li.progtrckr-todo {
+  color: silver;
+  border-bottom: 4px solid silver;
+}
+ol.progtrckr li.progtrckr-doing {
+  color: black;
+  border-bottom: 4px solid #16a085;
+}
+ol.progtrckr li.progtrckr-done {
+  color: black;
+  border-bottom: 4px solid #16a085;
+}
+ol.progtrckr li:after {
+  content: '\00a0\00a0';
+}
+ol.progtrckr li:before {
+  position: relative;
+  bottom: -3.7rem;
+  float: left;
+  left: 50%;
+}
+ol.progtrckr li.progtrckr-todo:before {
+  content: '\039F';
+  color: silver;
+  background-color: white;
+  width: 1.2em;
+  line-height: 1.4em;
+}
+ol.progtrckr li.progtrckr-todo:hover:before {
+  color: #16a085;
+}
+
+ol.progtrckr li.progtrckr-doing:before {
+  content: '\2022';
+  color: white;
+  background-color: #16a085;
+  width: 1.2em;
+  line-height: 1.2em;
+  border-radius: 1.2em;
+}
+ol.progtrckr li.progtrckr-doing:hover:before {
+  color: #16a085;
+}
+
+ol.progtrckr li.progtrckr-done:before {
+  content: '\2713';
+  color: white;
+  background-color: #16a085;
+  width: 1.2em;
+  line-height: 1.2em;
+  border-radius: 1.2em;
+}
+ol.progtrckr li.progtrckr-done:hover:before {
+  color: #16a085;
+}
+.containerAdd {
+  height: 500px;
+}
