--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,253 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap');
-body{
-  font-family: 'Quicksand', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Quicksand:400,500,700&display=swap');
+
+/*
+font-family: 'Quicksand', sans-serif;
+font-family: 'Lato', sans-serif;
+*/
+
+@font-face {
+  font-family: 'icomoon';
+  src: url('/fonts/icomoon.eot?aiju61');
+  src: url('/fonts/icomoon.eot?aiju61#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?aiju61') format('truetype'),
+    url('/fonts/icomoon.woff?aiju61') format('woff'),
+    url('/fonts/icomoon.svg?aiju61#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^='icon-'],
+[class*=' icon-'] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-plus:before {
+  content: '\f067';
+}
+
+.icon-search:before {
+  content: '\f002';
+}
+
+.icon-envelope-o:before {
+  content: '\f003';
+}
+
+.icon-user:before {
+  content: '\f007';
+}
+
+.icon-th-large:before {
+  content: '\f009';
+}
+
+.icon-th-list:before {
+  content: '\f00b';
+}
+
+.icon-camera:before {
+  content: '\f030';
+}
+
+.icon-map-marker:before {
+  content: '\f041';
+}
+
+.icon-chevron-right:before {
+  content: '\f054';
+}
+
+.icon-calendar:before {
+  content: '\f073';
+}
+
+.icon-facebook-square:before {
+  content: '\f082';
+}
+
+.icon-github:before {
+  content: '\f09b';
+}
+
+.icon-calendar-o:before {
+  content: '\f133';
+}
+
+.icon-instagram:before {
+  content: '\f16d';
+}
+
+.icon-google:before {
+  content: '\f1a0';
+}
+
+.icon-paper-plane:before {
+  content: '\f1d8';
+}
+
+.icon-send:before {
+  content: '\f1d8';
+}
+
+.icon-trash:before {
+  content: '\f1f8';
+}
+
+.icon-creative-commons:before {
+  content: '\f25e';
+}
+
+.icon-map-pin:before {
+  content: '\f276';
+}
+
+.icon-telegram:before {
+  content: '\f2c6';
+}
+
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100%;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100%;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.content {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+}
+
+.footer {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+}
+
+.my__container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0px 40px 0px 20px;
+}
+
+.logo {
+  width: 130px;
+  height: 100px;
+}
+
+li {
+  list-style: none;
+}
+
+a,
+button {
+  cursor: pointer;
+}
+
+@media (max-width: 1400px) {
+  .list__events-item.card {
+    -ms-flex-preferred-size: calc(33% - 50px);
+    flex-basis: calc(33% - 50px);
+  }
+}
+
+@media (max-width: 1060px) {
+  .list__events-item.card {
+    -ms-flex-preferred-size: calc(50% - 50px);
+    flex-basis: calc(50% - 50px);
+  }
+}
+
+@media (max-width: 900px) {
+  header .form__search_event input:focus {
+    min-width: 250px;
+  }
+}
+
+@media (max-width: 730px) {
+  .list__events-item.card {
+    -ms-flex-preferred-size: calc(90%);
+    flex-basis: calc(90%);
+    margin: 20px auto;
+  }
+  header .form__search_event {
+    display: none;
+  }
+  .header__cities-list ul {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+  }
+}
+
+@media (max-width: 600px) {
+  .header__cities-list ul {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media (max-width: 450px) {
+  .header .header__inner {
+    display: block;
+  }
+  .header .header__logo {
+    text-align: center;
+  }
+  .header .header__nav {
+    height: 50px;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+  }
+  .header .header__cities-list,
+  .header .header__calendar-list {
+    top: 154px;
+    left: 0;
+    right: 0;
+    max-width: none;
+  }
+  .header span {
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 350px) {
+  .list__events-item.card {
+    min-width: 280px;
+    -ms-flex-preferred-size: calc(100%);
+    flex-basis: calc(100%);
+  }
 }
