--- a/client/src/shared/components/Header/Header.css
+++ b/client/src/shared/components/Header/Header.css
@@ -1,26 +1,194 @@
-.navbar-brand {
-  font-size: 1.8rem;
-  font-weight: 700;
+.form__search_event {
+  position: relative;
 }
-.navbar-brand span {
-  font-size: 3.3rem;
-  color: #58be66;
+
+.form__search_event input {
+  border: none;
+  padding: 8px 40px 7px 20px;
+  font-size: 15px;
+  color: #323232;
+  border-radius: 15px;
+  outline: none;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
-.nav-item {
+
+.form__search_event button {
+  border: none;
+  background-color: #16a085;
+  color: #fff;
+  border-radius: 15px;
+  position: absolute;
+  right: 0;
+  width: 40px;
+}
+
+.form__search_event button::before {
+  content: '\f002';
+  font-family: 'icomoon';
+}
+
+.header {
+  font-size: 18px;
+  background-color: rgba(47, 49, 60, 0.9);
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+}
+
+.header span {
+  display: block;
+  color: #fff;
+  margin-left: 30px;
+}
+
+.header form {
+  position: relative;
+  margin-right: 15px;
+  margin-left: auto;
+}
+
+.header__search {
+  min-width: 250px;
+  width: 100%;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.header__search:focus {
+  min-width: 400px;
+  width: 100%;
+}
+
+.header__submit {
+  height: 37px;
+}
+
+.header__submit::before {
+  content: '\f002';
+  font-family: 'icomoon';
+}
+
+.header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
-.nav-link {
+
+.header .header__calendar,
+.header .header__cities {
+  cursor: pointer;
+  position: relative;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  outline: none;
+  margin-left: 20px;
+}
+
+.header .header__calendar:before {
+  content: '\f073';
+  font-family: 'icomoon';
+  font-size: 20px;
+  color: #fff;
+}
+
+.header__cities {
+  cursor: pointer;
+  position: relative;
+  padding-left: 15px;
+  margin-left: 50px;
+  position: relative;
+}
+
+.header__cities:before {
+  position: absolute;
+  color: #fff;
+  content: '\f041';
+  font-family: 'icomoon';
+  left: 0px;
+}
+
+.header__calendar-list,
+.header__cities-list {
+  background-color: #fff;
+  -webkit-box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+  max-width: 200px;
+  position: absolute;
+  top: 103px;
+  z-index: 1;
+  right: 100px;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.9s;
+  -o-transition: all 0.9s;
+  transition: all 0.9s;
+}
+
+.header__calendar-list.open,
+.header__cities-list.open {
+  height: auto;
+}
+
+.header__calendar-list a,
+.header__cities-list a {
   text-decoration: none;
-  color: #000;
+  cursor: pointer;
 }
-.nav-item:hover {
-  color: grey;
+
+.header__calendar-list ul,
+.header__cities-list ul {
+  padding: 20px;
+  margin: 0;
+  width: auto;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
 }
-.nav-link {
+
+.header__calendar-list li:hover,
+.header__cities-list li:hover {
+  color: #16a085;
+}
+
+.header__calendar-list li + li,
+.header__cities-list li + li {
+  margin-top: 20px;
+}
+
+.header__cities-list {
+  max-width: 100%;
+  left: 0;
+  right: 0;
+}
+
+.header__cities-list ul {
+  -webkit-column-count: 4;
+  -moz-column-count: 4;
+  column-count: 4;
+}
+.header__nav-link {
+  color: #fff;
+  margin-left: 20px;
+}
+.header__nav-link:hover {
   text-decoration: none;
-  color: #000;
+  color: #fff;
 }
-.collapse.navbar-collapse {
-  justify-content: flex-end;
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
