--- a/client/src/App.css
+++ b/client/src/App.css
@@ -157,7 +157,7 @@ body {
 }
 
 .my__container {
-  max-width: 1400px;
+  max-width: 1450px;
   margin: 0 auto;
   padding: 0px 40px 0px 20px;
 }
@@ -171,22 +171,72 @@ li {
   list-style: none;
 }
 
-a,
 button {
   cursor: pointer;
 }
-
-@media (max-width: 1400px) {
+button:hover {
+  background-color: #17a589;
+}
+button:focus {
+  outline: none !important;
+}
+.link {
+  text-decoration: none;
+  color: #fff;
+}
+.link:hover {
+  text-decoration: none;
+  color: #fff;
+}
+.link-btn {
+  padding: 7px 30px;
+  color: #fff;
+  text-decoration: none;
+  background-color: rgba(22, 160, 133, 0.9);
+  border-radius: 15px;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.link-btn:hover {
+  text-decoration: none;
+  color: #fff;
+}
+.link-btn + .link-btn {
+  margin-left: 10px;
+}
+@media (max-width: 1440px) {
   .list__events-item.card {
     -ms-flex-preferred-size: calc(33% - 50px);
     flex-basis: calc(33% - 50px);
   }
 }
 
-@media (max-width: 1060px) {
+@media (max-width: 1100px) {
   .list__events-item.card {
     -ms-flex-preferred-size: calc(50% - 50px);
     flex-basis: calc(50% - 50px);
+  }
+
+  .slider__title {
+    font-size: 40px;
+    margin-bottom: 30px;
+  }
+  .footer__col {
+    max-width: 120px;
+  }
+  .footer__content {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
+  .footer__col-follow {
+    margin: 0 auto;
+    text-align: center;
+    min-width: 100%;
+    width: 100%;
+  }
+  .footer__col-follow .footer__col-title {
+    display: none;
   }
 }
 
@@ -194,9 +244,44 @@ button {
   header .form__search_event input:focus {
     min-width: 250px;
   }
+  .slider__title {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+  .slider__btn {
+    font-size: 15px;
+    padding: 7px 20px;
+  }
+  .list__events-item {
+    min-width: 300px;
+    width: 100%;
+    display: block;
+    -ms-flex-preferred-size: calc(25% - 50px);
+    flex-basis: calc(25% - 50px);
+    border: none;
+  }
+
+  .list__events-item .list__events-item-img {
+    min-height: 180px;
+    width: 100%;
+    max-width: none;
+  }
+  .list__events-item .list__events-item-description {
+    padding-left: 15px;
+    padding-bottom: 15px;
+  }
+  .list__events-item-category,
+  .list__events-item-title {
+    margin-bottom: 0;
+  }
+  .list__events-item .list__events-item-bottom_info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
 
-@media (max-width: 730px) {
+@media (max-width: 750px) {
   .list__events-item.card {
     -ms-flex-preferred-size: calc(90%);
     flex-basis: calc(90%);
@@ -210,13 +295,56 @@ button {
     -moz-column-count: 3;
     column-count: 3;
   }
+  .slider__title {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+  .slider__btn {
+    font-size: 15px;
+    padding: 5px 15px;
+  }
+  .carousel__content {
+    max-width: 75%;
+    width: 100%;
+    padding: 15px;
+  }
 }
-
+@media (max-width: 650px) {
+  .slider__title {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
+  .slider__btn {
+    display: none;
+  }
+}
 @media (max-width: 600px) {
   .header__cities-list ul {
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
+  }
+  .footer__col {
+    max-width: 100%;
+    text-align: left;
+    margin-bottom: 20px;
+  }
+  .footer__content ul {
+    margin-top: 20px;
+  }
+  .list__events-item .list__events-item-bottom_info {
+    display: block;
+  }
+  .list__events-item-creator,
+  .list__events-item-descr {
+    display: none;
+  }
+  .list__events-item-location,
+  .list__events-item-date {
+    margin-bottom: 15px;
+  }
+  .list__events-sort_btn-item {
+    display: none;
   }
 }
 
@@ -234,7 +362,7 @@ button {
   }
   .header .header__cities-list,
   .header .header__calendar-list {
-    top: 154px;
+    top: 150px;
     left: 0;
     right: 0;
     max-width: none;
@@ -245,9 +373,16 @@ button {
 }
 
 @media (max-width: 350px) {
+  .list__events-item {
+    min-width: 200px;
+    max-width: 300px;
+  }
   .list__events-item.card {
     min-width: 280px;
     -ms-flex-preferred-size: calc(100%);
     flex-basis: calc(100%);
+  }
+  .footer__col-follow li + li {
+    margin-left: 15px;
   }
 }
