--- a/client/src/events/pages/EventsResult.css
+++ b/client/src/events/pages/EventsResult.css
@@ -3,7 +3,7 @@
 }
 .list__events-sort {
   max-width: 750px;
-  margin: 0 auto;
+  margin: 50px auto;
   background-color: #e7e7e7;
   padding: 10px 30px;
   border-radius: 13px;
@@ -16,7 +16,6 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 50px;
 }
 
 .list__events-sort_btn-item {
@@ -58,6 +57,7 @@
   margin: 20px;
   -ms-flex-preferred-size: calc(25% - 50px);
   flex-basis: calc(25% - 50px);
+  border: none;
 }
 
 .list__events-item.card .list__events-item-img {
