--- a/client/src/shared/components/Footer/Footer.css
+++ b/client/src/shared/components/Footer/Footer.css
@@ -38,7 +38,8 @@
 }
 
 .footer__col {
-  min-width: 300px;
+  max-width: 300px;
+  width: 100%;
 }
 
 .footer__col-title {
@@ -60,8 +61,9 @@
 }
 
 .footer__col-follow {
-  margin-left: auto;
-  min-width: 300px;
+  margin: 0 auto 0 0;
+  max-width: 200px;
+  width: 100%;
 }
 
 .footer__col-follow li.social {
