--- a/client/src/events/pages/EventsResult.css
+++ b/client/src/events/pages/EventsResult.css
@@ -1,5 +1,5 @@
 .list__events {
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 .list__events-sort {
   max-width: 750px;
@@ -34,7 +34,7 @@
 }
 
 .list__events-sort_btn-item:before {
-  font-family: 'icomoon';
+  font-family: "icomoon";
   font-size: 20px;
   color: rgba(47, 49, 60, 0.6);
 }
@@ -144,6 +144,7 @@
 }
 
 .list__events-item-description {
+  max-width: 350px;
   padding: 20px 0px 25px 30px;
 }
 
@@ -156,18 +157,19 @@
 .list__events-item-category {
   font-size: 16px;
   color: #16a085;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   margin-bottom: 10px;
 }
 
 .list__events-item-descr {
   font-size: 15px;
   color: #cdcdcd;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .list__events-item-price {
-  padding: 20px 20px 15px 30px;
+  text-align: center;
+  padding: 20px 20px 15px 15px;
   font-weight: 700;
   font-size: 25px;
 }
@@ -196,20 +198,20 @@
 .list__events-item-location::before,
 .list__events-item-date::before {
   position: absolute;
-  font-family: 'icomoon';
+  font-family: "icomoon";
   left: 0;
 }
 
 .list__events-item-creator::before {
-  content: '\f007';
+  content: "\f007";
 }
 
 .list__events-item-location::before {
-  content: '\f276';
+  content: "\f276";
 }
 
 .list__events-item-date::before {
-  content: '\f133';
+  content: "\f133";
 }
 
 .list__events-item-join {
