--- a/client/src/App.css
+++ b/client/src/App.css
@@ -162,14 +162,27 @@ li {
   list-style: none;
 }
 
-button {
+/* button {
   cursor: pointer;
 }
 button:hover {
   background-color: #17a589;
+} */
+.my__button {
+  color: #16a085;
+  border: 1px solid #16a085;
+  background-color: #fff;
+  padding: 6px 15px;
+  border-radius: 5px;
+  transition: all 0.2s;
 }
-button:focus {
-  outline: none !important;
+.my__button:hover {
+  background-color: rgba(22, 160, 133, 0.9);
+  color: #fff;
+  box-shadow: 0px 0px 9px -2px rgba(22, 160, 132, 1);
+}
+.my__button:focus {
+  outline: none;
 }
 .link {
   text-decoration: none;
@@ -195,6 +208,11 @@ button:focus {
 }
 .link-btn + .link-btn {
   margin-left: 10px;
+}
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 @media (max-width: 1440px) {
   .list__events-item.card {
@@ -376,4 +394,8 @@ button:focus {
   .footer__col-follow li + li {
     margin-left: 15px;
   }
+}
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap');
+body {
+  font-family: 'Quicksand', sans-serif;
 }
