add styling for admin panel

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,7 +150,7 @@ body {
 .my__container {
   max-width: 1450px;
   margin: 0 auto;
-  padding: 0px 40px 0px 20px;
+  padding: 0px 40px;
 }
 
 .logo {
