--- a/client/src/admin/components/Users/AdminUserItem.css
+++ b/client/src/admin/components/Users/AdminUserItem.css
@@ -1,8 +1,12 @@
 .adminpanel__user-list {
-  padding-bottom: 0 !important;
-  padding-left: 0 !important;
-  padding-right: 0 !important;
-  border: 1px solid rgba(0, 0, 0, 0.125) !important;
+  position: relative;
+  display: block;
+  background-color: #fff;
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 1.25rem;
+  border: none;
 }
 .adminpanel__user-list p {
   margin-bottom: 0rem;
@@ -17,19 +21,9 @@
   max-width: 3rem;
   max-height: 3rem;
 }
-.adminpanel__user-status {
-  width: 1.5rem;
-  height: 1.5rem;
-  border-radius: 1rem;
-}
 .adminpanel__user-status-active {
-  background-color: rgb(0, 211, 0);
-}
-.adminpanel__user-status-inactive {
-  background-color: rgb(163, 163, 163);
-}
-.adminpanel__user-status-banned {
-  background-color: rgb(228, 0, 0);
+  color: #fff;
+  background-color: #16a085;
 }
 .adminpanel__row {
   margin-left: 0 !important;
@@ -44,15 +38,42 @@
 }
 .adminpanel__toggler-icon {
   cursor: pointer;
-  background-color: #f8f9fa;
+  color: rgba(47, 49, 60, 0.9);
+  background-color: #fff;
   text-align: center !important;
+  border-bottom: 2px solid rgba(47, 49, 60, 0.9);
+  transition: all 0.4s ease;
 }
-.adminpanel_extra-info {
-  border-top: 1px solid #f8f9fa;
+.adminpanel__toggler-icon:hover {
+  color: #16a085;
+  border-bottom: 2px solid #16a085;
 }
+.adminpanel__toggler-icon_expanded {
+  border-bottom: 2px solid #16a085;
+}
+.button-danger {
+  text-transform: uppercase;
+  font-size: 80%;
+  font-weight: 600;
+  padding: 5px 25px;
+  color: #dc3545;
+  text-decoration: none;
+  border: 2px solid #dc3545;
+  background-color: transparent;
+  border-radius: 15px;
+  transition: all 0.3s;
+}
+.button-danger:hover {
+  color: white;
+  background-color: #dc3545;
+}
+
 @media (min-width: 992px) {
   .adminpanel__float-left {
     float: left !important;
+  }
+  .adminpanel__float-right {
+    float: right !important;
   }
 }
 @media (max-width: 992px) {
