--- a/client/src/shared/components/FormElements/Input.css
+++ b/client/src/shared/components/FormElements/Input.css
@@ -1,33 +1,94 @@
-.form-input {
-  margin: 1rem 0;
+.shaking-element {
+  position: static;
 }
-
-.form-input label,
-.form-input input,
-.form-input textarea {
-  display: block;
+.dropdown-menu {
+  right: 0;
 }
-
-.form-input label {
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
-
-.form-input input,
-.form-input textarea {
+.input__form {
+  margin-top: 1rem;
   width: 100%;
-  font: inherit;
-  border: 1px solid #ccc;
-  background: #f8f8f8;
-  padding: 0.1rem 0.2rem;
+  position: relative;
+  height: auto;
+  /* overflow: hidden; */
+}
+.input__form input {
+  height: 100%;
+  width: 100%;
+  padding-top: 20px;
+  border: none;
+  outline: none;
+}
+.input__form label {
+  position: absolute;
+  margin: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  border-bottom: 1px solid rgb(67, 69, 79);
+}
+.input__form label::after {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  bottom: -2px;
+  left: 0px;
+  border-bottom: 3px solid #16a085;
+  transition: all 0.3s ease;
+}
+.input__label-content {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  transition: all 0.3s ease;
+}
+.input__form input:focus + .input__label-name .input__label-content,
+.input__form input:valid + .input__label-name .input__label-content {
+  transform: translateY(-100%);
+  color: #16a085;
+  font-size: 90%;
+}
+.input__form input:focus + .input__label-name::after,
+.input__form input :valid + .input__label-name::after {
+  width: 100%;
+}
+.input__invalid {
+  color: #dc3545 !important;
+}
+.input__invalid-feedback {
+  display: block;
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #dc3545;
+}
+.input__input-group-append {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  margin: 5px 10px;
+  cursor: pointer;
 }
 
-.form-input input:focus,
-.form-input textarea:focus {
-  outline: none;
-  background: #ebebeb;
-  border-color: #1a0077;
-}
-.invalid-feedback {
-  display: block !important;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus input:-webkit-autofill,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 0;
+  -webkit-text-fill-color: #ссс;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: all 5000s ease-in-out 0s;
+  background: -webkit-linear-gradient(
+    top,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 174, 255, 0.04) 50%,
+    rgba(255, 255, 255, 0) 51%,
+    rgba(0, 174, 255, 0.03) 100%
+  );
 }
