--- a/client/src/shared/components/UI/Pagination.css
+++ b/client/src/shared/components/UI/Pagination.css
@@ -15,7 +15,7 @@
   text-shadow: 0 0 2px #16a085;
   text-decoration: none;
   background-color: #fff;
-  border-color: #128f76;
+  border-color: #0fb896;
 }
 .pagination__page-item.active .pagination__page-link:hover {
   text-shadow: none;
@@ -29,7 +29,7 @@
   z-index: 3;
   font-weight: 700;
   border-color: #128f76;
-  box-shadow: inset 0 -13px 10px -15px #16a085;
+  box-shadow: inset 0 -13px 11px -15px #16a085;
 }
 .pagination__page-item.disabled .pagination__page-link {
   color: #6c757d;
