--- a/client/src/shared/components/UI/Pagination.css
+++ b/client/src/shared/components/UI/Pagination.css
@@ -3,7 +3,7 @@
   display: block;
   padding: 0.5rem 0.75rem;
   line-height: 1.25;
-  color: #16a085;
+  color: #6c757d;
   background-color: #fff;
   border: none;
   border-bottom: 3px solid rgba(47, 49, 60, 0.9);
@@ -15,7 +15,7 @@
   text-shadow: 0 0 2px #16a085;
   text-decoration: none;
   background-color: #fff;
-  border-color: #0fb896;
+  /* border-color: #0fb896; */
 }
 .pagination__page-item.active .pagination__page-link:hover {
   text-shadow: none;
@@ -28,6 +28,7 @@
 .pagination__page-item.active .pagination__page-link {
   z-index: 3;
   font-weight: 700;
+  color: #16a085;
   border-color: #128f76;
   box-shadow: inset 0 -13px 11px -15px #16a085;
 }
