--- a/client/src/events/pages/EventsResult.css
+++ b/client/src/events/pages/EventsResult.css
@@ -113,7 +113,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 800px;
 }
 
 .list__events-item:hover {
@@ -144,7 +143,7 @@
 }
 
 .list__events-item-description {
-  max-width: 350px;
+  max-width: 650px;
   padding: 20px 0px 25px 30px;
 }
 
@@ -190,9 +189,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -203,6 +199,7 @@
 .list__events-item-date {
   padding-left: 20px;
   position: relative;
+  margin-right: 40px;
 }
 
 .list__events-item-creator::before,
