--- a/client/src/events/components/EventItem.css
+++ b/client/src/events/components/EventItem.css
@@ -1,54 +1,54 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway|Varela+Round|Coda);
 
 .event-item {
-    margin: 1.5rem auto;
+  margin: 1.5rem auto;
 }
 
 .event-item__desctiption,
 .event-item__owner,
 .event-item__info {
-    font-family: "varela round", sans-serif;
+  font-family: 'varela round', sans-serif;
 }
 
 .event-item__desctiption h3,
 .event-item__info h3 {
-    font-weight: 700;
-    color: #16a085;
+  font-weight: 700;
+  color: #16a085;
 }
 
 .event-item__info {
-    font-size: 1.2rem;
-    line-height: 2rem;
+  font-size: 1.2rem;
+  line-height: 2rem;
 }
 
 .event-item__info span {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .event-item__img {
-    width: 100%;
-    object-fit: cover;
+  width: 100%;
+  object-fit: cover;
 }
 
 .event-item__img {
-    padding: 0px 20px 20px 0px !important;
+  padding: 20px;
 }
 
 .map-container {
-    padding: 0px !important;
+  padding: 10px;
 }
 
 .map-container {
-    height: 50vh;
+  height: 50vh;
 }
 
 .event-item__img figure {
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 .event-item__img figure img {
-    width: 100%;
+  width: 100%;
 }
