--- a/client/src/shared/components/FormElements/Input.css
+++ b/client/src/shared/components/FormElements/Input.css
@@ -23,9 +23,22 @@
   margin-top: 1rem;
   margin-bottom: -5px;
   resize: none;
-  overflow-y: hidden;
+  overflow-y: scroll;
   border: none;
   outline: none;
+}
+.input__form textarea::-webkit-scrollbar-track {
+  background: #ffffff00;
+}
+.input__form textarea::-webkit-scrollbar-thumb {
+  background: #bbb;
+}
+.input__form textarea::-webkit-scrollbar-thumb:hover {
+  background: #999;
+  cursor: pointer;
+}
+.input__form textarea::-webkit-scrollbar {
+  width: 10px;
 }
 .input__form label {
   position: absolute;
@@ -51,6 +64,7 @@
   position: absolute;
   bottom: 0px;
   left: 0px;
+  pointer-events: none;
   transition: all 0.3s ease;
 }
 .input__form input:focus + .input__label-name .input__label-content,
