--- a/client/src/events/pages/EventsResult.css
+++ b/client/src/events/pages/EventsResult.css
@@ -51,10 +51,10 @@
 }
 
 .list__events-item.card {
+  margin: 20px;
   min-width: 300px;
   width: 100%;
   display: block;
-  margin: 20px;
   -ms-flex-preferred-size: calc(25% - 50px);
   flex-basis: calc(25% - 50px);
   border: none;
@@ -103,7 +103,7 @@
 }
 
 .list__events-item {
-  margin: 30px auto;
+  margin: 20px 0px;
   -webkit-box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
   box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
   border-radius: 5px;
