--- a/client/src/users/pages/UserProfile.css
+++ b/client/src/users/pages/UserProfile.css
@@ -125,7 +125,7 @@
 }
 .user_profile_event-item:hover {
   text-decoration: none;
-  color: #000;
+  color: #16a085;
 }
 .profile-title {
   font-size: 20px;
