--- a/client/src/shared/components/UI/Pagination.css
+++ b/client/src/shared/components/UI/Pagination.css
@@ -6,7 +6,7 @@
   color: #6c757d;
   background-color: #fff;
   border: none;
-  border-bottom: 3px solid rgba(47, 49, 60, 0.9);
+  border-bottom: 3px solid #6c757d;
   box-shadow: inset 0 -13px 10px -15px rgba(47, 49, 60, 0.9);
 }
 .pagination__page-link:hover {
