--- a/client/src/admin/components/Users/AdminUserItem.css
+++ b/client/src/admin/components/Users/AdminUserItem.css
@@ -68,6 +68,15 @@
   color: white;
   background-color: #dc3545;
 }
+.button-danger:disabled {
+  color: #7c7c7c;
+  border: 2px solid #7c7c7c;
+}
+.button-danger:disabled:hover {
+  color: #7c7c7c;
+  background-color: transparent;
+  border: 2px solid #7c7c7c;
+}
 .adminpanel__button-flat {
   text-decoration: none;
   border: 2px solid #fff;
