--- a/client/src/shared/fonts/fonts.css
+++ b/client/src/shared/fonts/fonts.css
@@ -148,3 +148,12 @@
 .icon-telegram:before {
   content: '\f2c6';
 }
+.icon-cancel-circle:before {
+  content: '\ea0d';
+}
+.icon-cross:before {
+  content: '\ea0f';
+}
+.icon-checkmark:before {
+  content: '\ea10';
+}
