--- a/client/src/admin/components/Users/AdminUserItem.css
+++ b/client/src/admin/components/Users/AdminUserItem.css
@@ -88,6 +88,9 @@
 .adminpanel__button-flat:hover {
   color: #16a085;
 }
+.adminpanel__button-flat:disabled:hover {
+  color: #7c7c7c;
+}
 .adminpanel__button-flat:focus {
   color: #16a085;
 }
