--- a/client/src/users/components/EditAvatarForm.css
+++ b/client/src/users/components/EditAvatarForm.css
@@ -3,7 +3,6 @@
   display: flex;
   align-items: stretch;
   justify-content: center;
-  margin: 2rem 2rem;
 }
 .div-avatar-inputs {
   display: flex;
@@ -14,6 +13,8 @@
 }
 .div-avatar-inputs label {
   margin-right: 1rem;
+  color: #16a085;
+  font-size: 90%;
 }
 .div-avatar-inputs > div {
   text-align: left;
