--- a/client/src/users/pages/EditAvatar.css
+++ b/client/src/users/pages/EditAvatar.css
@@ -1,5 +1,16 @@
-.div-uploadAvatar {
-  padding: 1rem;
-  margin: 2rem;
+.update-title {
   text-align: center;
+  font-family: 'Quicksand', sans-serif;
+  margin-bottom: 20px;
+}
+.avatar-buttons {
+  margin: 2rem 1rem 0.5rem 1rem;
+  text-align: center;
+}
+.avatar-buttons button {
+  margin: 5px 5px 5px 25px;
+}
+.card_wrapper {
+  margin: 60px auto;
+  max-width: 700px;
 }
