--- a/client/src/events/pages/EventsResult.css
+++ b/client/src/events/pages/EventsResult.css
@@ -49,7 +49,15 @@
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-
+.past-evnts__top{
+  margin: 50px auto 35px;
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+}
+.past-event{
+  opacity: 0.6;
+}
 .list__events-item.card {
   margin: 20px;
   min-width: 300px;
