--- a/client/src/users/pages/UserProfile.css
+++ b/client/src/users/pages/UserProfile.css
@@ -133,9 +133,13 @@
   color: #16a085;
 }
 .profile-title {
+  font-family: 'Quicksand', sans-serif;
   font-size: 20px;
   font-weight: 700;
-  margin-bottom: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 .profile_categories-item.added {
   background-color: rgba(45, 169, 145, 0.6);
